changed width size on span and added transition time to bring on an effect when hoveing over the button

--- a/styels.css
+++ b/styels.css
@@ -97,12 +97,13 @@ button {
 span {
   background: #009688;
   height: 100%;
-  width: 100%;
+  width: 0;
   border-radius: 25px;
   position: absolute;
   left: 0;
   bottom: 0;
   z-index: -1;
+  transition: 0.5s;
 }
 
 button:hover span {
